@@ -13,6 +13,11 @@ Release @version@-@release@ Start 24/04/2023 End XX/XX/XXXX
 06. base/makesalt.c: added YESCRYPT. use crypt_gensalt if available to
     generate salt for yescrypt
 07. configure.ac, base/hashmethods.h.in: added YESCRYPT_HASH
+- 06/07/2023
+08. renamed ssl directory to tls
+09. base/strerr.h: protect STRERR, STRERR_SYS macro parameters
+10. tls/tls.c, tls/tls.h: store ssl, system error for tlsread, tlswrite in
+    strerr_tls structure
 
 * Sun Apr 23 2023 16:55:15 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.3-1.1%{?dist}
 Release 1.1.3-1.1 Start 08/02/2023 End 23/04/2023
